--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require ./vendors/bootstrap
+ *= require ./vendors/loading-bar
+ *= require ./vendors/notify
+ *= require_tree ./admin
  */
