--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -1,4 +1,5 @@
 <ul class="list-unstyled text-center">
   <li><%= link_to 'Dashboard', admin_dashboard_path %></li>
   <li><%= link_to 'Categories', admin_categories_path %></li>
+  <li><%= link_to 'SubCategories', admin_subcategories_path %></li>
 </ul>
