--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-sm-12">
     <ul class="list-inline">
-      <li><%= link_to 'Add Category', new_admin_category_path, class: 'btn btn-primary' %></li>
+      <li>
+        <%= link_to 'Add Category', new_admin_category_path, class: 'btn btn-primary' %>
+      </li>
     </ul>
   </div>
 </div>
