--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -2,4 +2,5 @@
   <li><%= link_to 'Dashboard', admin_dashboard_path %></li>
   <li><%= link_to 'Categories', admin_categories_path %></li>
   <li><%= link_to 'SubCategories', admin_subcategories_path %></li>
+  <li><%= link_to 'Advertisements', admin_advertisements_path %></li>
 </ul>
