--- a/app/views/admin/subcategories/_form.html.erb
+++ b/app/views/admin/subcategories/_form.html.erb
@@ -3,6 +3,7 @@
       <div class="col-sm-6">
         <%= f.error_notification %>
         <%= f.input :name %>
+        <%= f.input :category_id, collection: category_for_collection, prompt: 'Select Category' %>
         <%= f.submit 'Save', class: 'btn btn-success' %>
       </div>
     </div>
