UI of header, index and footer

--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -11,6 +11,6 @@
 
 <%= render partial: 'welcome/shared/header' %>
 <%= yield %>
-
+<%= render partial: 'welcome/shared/footer' %>
 </body>
 </html>
