--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -3,4 +3,5 @@
   <li><%= link_to 'Categories', admin_categories_path %></li>
   <li><%= link_to 'SubCategories', admin_subcategories_path %></li>
   <li><%= link_to 'Advertisements', admin_advertisements_path %></li>
+  <li><%= link_to 'Customers', admin_customers_path %></li>
 </ul>
