--- a/app/views/admin/advertisements/index.html.erb
+++ b/app/views/admin/advertisements/index.html.erb
@@ -25,17 +25,20 @@
           <tr>
             <td><%= advertisement.title %></td>
             <td><%= advertisement.description %></td>
-            <td><%= advertisement.subcategory.category.name %></td>
-            <td><%= advertisement.subcategory.name %></td>
             <td>
-              <%= link_to admin_advertisement_path(advertisement) do %>
+              <%#= advertisement.subcategory.category.name if advertisement.subcategory.category.present? %>
+
+            </td>
+            <td><%#= advertisement.subcategory.name %></td>
+            <td>
+              <%#= link_to admin_advertisement_path(advertisement) do %>
                   <i class="fa fa-eye"></i>
-              <%- end %>
+              <%#- end %>
             </td>
             <td>
-              <%= link_to edit_admin_advertisement_path(advertisement) do %>
+              <%#= link_to edit_admin_advertisement_path(advertisement) do %>
                   <i class="fa fa-edit"></i>
-              <%- end %>
+              <%#- end %>
             </td>
           </tr>
       <%- end %>
