--- a/app/views/layouts/customer.html.erb
+++ b/app/views/layouts/customer.html.erb
@@ -14,7 +14,10 @@
 <div class="container-fluid">
   <% if user_signed_in? and current_user.customer? %>
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-2">
+          <%= render partial: 'customer/shared/sidebar' %>
+        </div>
+        <div class="col-sm-10">
           <%= render partial: 'customer/shared/alerts' %>
           <%= yield %>
         </div>
