--- a/app/views/admin/advertisements/index.html.erb
+++ b/app/views/admin/advertisements/index.html.erb
@@ -26,19 +26,18 @@
             <td><%= advertisement.title %></td>
             <td><%= advertisement.description %></td>
             <td>
-              <%#= advertisement.subcategory.category.name if advertisement.subcategory.category.present? %>
-
+              <%= advertisement.subcategory.category.name %>
             </td>
-            <td><%#= advertisement.subcategory.name %></td>
+            <td><%= advertisement.subcategory.name %></td>
             <td>
-              <%#= link_to admin_advertisement_path(advertisement) do %>
+              <%= link_to admin_advertisement_path(advertisement) do %>
                   <i class="fa fa-eye"></i>
-              <%#- end %>
+              <%- end %>
             </td>
             <td>
-              <%#= link_to edit_admin_advertisement_path(advertisement) do %>
+              <%= link_to edit_admin_advertisement_path(advertisement) do %>
                   <i class="fa fa-edit"></i>
-              <%#- end %>
+              <%- end %>
             </td>
           </tr>
       <%- end %>
@@ -46,3 +45,5 @@
     </table>
   </div>
 </div>
+
+
