--- a/app/views/admin/advertisements/new.html.erb
+++ b/app/views/admin/advertisements/new.html.erb
@@ -4,3 +4,16 @@
   </div>
   <div class="col-sm-8"></div>
 </div>
+<p class=""></p>
+
+<script>
+    $(document).ready(function(){
+//      $('#advertisement_category_id option:selected').click();
+        $( "#advertisement_category_id").change(function() {
+            var category_val =  this.value;
+            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){
+                alert("Data: " + data + "\nStatus: " + status);
+            });
+        });
+    });
+</script>
