--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,386 +1,14 @@
-<!-- slider start -->
+<h2>WELCOME</h2>
 
-<div class="slider-main-con">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://d3tfanr7troppj.cloudfront.net/static_files/images/000/000/007/original/Image_4.png?1451907762" class="img-responsive" alt="">
-      </div>
-
-      <div class="item">
-        <img src="http://d3tfanr7troppj.cloudfront.net/static_files/images/000/000/007/original/Image_4.png?1451907762" class="img-responsive" alt="">
-      </div>
-
-      <div class="item">
-        <img src="http://d3tfanr7troppj.cloudfront.net/static_files/images/000/000/007/original/Image_4.png?1451907762" class="img-responsive" alt="">
-      </div>
-
-      <div class="item">
-        <img src="http://d3tfanr7troppj.cloudfront.net/static_files/images/000/000/007/original/Image_4.png?1451907762"  class="img-responsive"alt="">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a> -->
-  </div>
-
-</div>
-
-<!-- slider finish -->
-
-<!-- product category start -->
-
-<div class="product_category_main">
+<form action="/">
+  <input type="text" name="title" value="<%= params[:title] %>" placeholder="Search by title">
+  <input type="text" name="category" value="<%= params[:category] %>" placeholder="Search by category">
+  <input type="submit">
+</form>
 
 
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-9 col-xs-12">
-          <h3>Products Categories</h3>
-        </div>
-        <div class="col-sm-3 col-xs-12">
-          <!-- Controls -->
-          <div class="controls pull-right hidden-xs">
-            <a class="left fa fa-chevron-left btn btn" href="#carousel-example"
-               data-slide="prev"></a><a class="right fa fa-chevron-right btn" href="#carousel-example"
-                                        data-slide="next"></a>
-          </div>
-        </div>
-      </div>
-      <div id="carousel-example" class="carousel slide" data-ride="carousel">
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-          <div class="item active">
-            <div class="row">
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product A</h5>
-                        <h5 class="price-text-color">$7.99</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_001.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product B</h5>
-                        <h5 class="price-text-color">$9.99</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_002.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product C</h5>
-                        <h5 class="price-text-color">$7.58</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_003.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Another product</h5>
-                        <h5 class="price-text-color">$3.75</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_001.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="row">
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product</h5>
-                        <h5 class="price-text-color">$7.17</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_001.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product</h5>
-                        <h5 class="price-text-color">$19.99</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_002.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product</h5>
-                        <h5 class="price-text-color">$1.99</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_003.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="col-item">
-                  <div class="info">
-                    <div class="row">
-                      <div class="price col-sm-6 col-xs-8">
-                        <h5>Product</h5>
-                        <h5 class="price-text-color">$1.09</h5>
-                      </div>
-                      <div class="rating col-sm-6 col-xs-4">
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                        <i class="price-text-color fa fa-star"></i>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="photo">
-                    <img src="http://www.prepbootstrap.com/Content/images/template/productslider/product_001.jpg" class="img-responsive" alt="a" />
-                  </div>
-                  <div class="info">
-                    <div class="separator clear-left">
-                      <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="#" class="">Add to cart</a>
-                      </p>
-                      <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="#" class="">More details</a>
-                      </p>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-
-<!-- product category finish -->
-
-
-<!-- image product category start -->
-
-<div class="img-product-category-con">
-  <div class="container">
-    <h3>Products Second Categories</h3>
-    <div class="row">
-      <div class="col-sm-6 col-xs-12">
-        <div class="product-img">
-          <a href="#"><img border="0" class="img-responsive" src="http://www.samsungcc.com.au/sites/default/files/analog_page_banner_0.png" alt=""></a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-xs-12">
-        <div class="product-img">
-          <a href="#"><img border="0" class="img-responsive" src="http://www.samsungcc.com.au/sites/default/files/analog_page_banner_0.png" alt=""></a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4 col-xs-12">
-        <div class="product-img">
-          <a href="#"><img border="0" class="img-responsive" src="http://www.samsungcc.com.au/sites/default/files/analog_page_banner_0.png" alt=""></a>
-        </div>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <div class="product-img">
-          <a href="#"><img border="0" class="img-responsive" src="http://www.samsungcc.com.au/sites/default/files/analog_page_banner_0.png" alt=""></a>
-        </div>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <div class="product-img">
-          <a href="#"><img border="0" class="img-responsive" src="http://www.samsungcc.com.au/sites/default/files/analog_page_banner_0.png" alt=""></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- image product category finish -->
+<% @advertisements.each do |advertisement| %>
+    <%= advertisement.title %>,
+    <%#= advertisement.subcategory.name %>
+    <%= advertisement.subcategory.category.name %> <br>
+<% end %>
