--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
-<h2>WELCOME</h2>
+<h2>WELCOME PAGE</h2>
 
 <form action="/">
   <input type="text" name="title" value="<%= params[:title] %>" placeholder="Search by title">
   <input type="text" name="category" value="<%= params[:category] %>" placeholder="Search by category">
-  <input type="submit">
+  <input type="submit" value="Filter">
 </form>
 
 
