--- a/app/views/admin/advertisements/new.html.erb
+++ b/app/views/admin/advertisements/new.html.erb
@@ -8,14 +8,13 @@
 
 <script>
     $(document).ready(function(){
+//        $('#advertisement_subcategory_id').html("");
         $( "#advertisement_category_id").change(function() {
             var category_val = this.value;
             $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){
-//                $('p').text("Data: " + data[0].name + "\nStatus: " + status);
-//                data.push(data[0].name);
-                var appendString = '';
+                var appendString = '<option value="">Select Subcategory</option>';
                 for(var i=0; i < data.length;i++){
-                    appendString +='<option>' + data[i].name + '</option>';
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
                 }
                 $('#advertisement_subcategory_id').html(appendString);
             });
