--- a/app/views/admin/advertisements/new.html.erb
+++ b/app/views/admin/advertisements/new.html.erb
@@ -12,6 +12,14 @@
             $('#advertisement_subcategory_id').prop('disabled', 'disabled');
         }else{
             $('#advertisement_subcategory_id').prop('disable', true);
+            var category_val = $('#advertisement_category_id').val();
+            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){
+                var appendString = '<option value="">Select Subcategory</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#advertisement_subcategory_id').html(appendString);
+            });
         }
 
         $("#advertisement_category_id").change(function() {
