--- a/app/views/admin/advertisements/index.html.erb
+++ b/app/views/admin/advertisements/index.html.erb
@@ -7,6 +7,9 @@
     </ul>
   </div>
 </div>
+
+<%= will_paginate @advertisements %>
+
 <div class="row">
   <div class="col-sm-12">
     <table class="table table-striped">
@@ -43,5 +46,7 @@
     </table>
   </div>
 </div>
+
+<%= will_paginate @advertisements %>
 
 
