--- a/app/views/admin/subcategories/index.html.erb
+++ b/app/views/admin/subcategories/index.html.erb
@@ -7,8 +7,11 @@
     </ul>
   </div>
 </div>
+
+<%= will_paginate @subcategories %>
+
 <div class="row">
-  <div class="col-sm-12">
+  <div class="col-sm-12 container">
     <table class="table table-striped">
       <thead>
       <tr class="info">
@@ -31,3 +34,5 @@
     </table>
   </div>
 </div>
+
+<%= will_paginate @subcategories %>
