--- a/app/views/admin/advertisements/index.html.erb
+++ b/app/views/admin/advertisements/index.html.erb
@@ -16,10 +16,11 @@
       <thead>
       <tr class="info">
         <th>Title</th>
-        <th>Description</th>
         <th>Category</th>
         <th>Subcategory</th>
         <th>Action</th>
+        <th></th>
+        <th></th>
         <th></th>
       </tr>
       </thead>
@@ -27,9 +28,17 @@
       <% @advertisements.each do |advertisement| %>
           <tr>
             <td><%= advertisement.title %></td>
-            <td><%= advertisement.description %></td>
             <td><%= advertisement.subcategory.category.name %></td>
             <td><%= advertisement.subcategory.name %></td>
+            <td>
+              <% if advertisement.admin_verified? %>
+                  <span class="text-success">Verified by admin</span>
+                  <%= link_to( 'Un-verify' , admin_approve_admin_advertisement_path(advertisement, admin_verified: false), method: :put, class: 'btn btn-danger btn-xs') %>
+              <%- else %>
+                  <span class="text-danger">Not verified</span>
+                  <%= link_to( 'Verify' , admin_approve_admin_advertisement_path(advertisement, admin_verified: true), method: :put, class: 'btn btn-success btn-xs') %>
+              <%- end %>
+            </td>
             <td>
               <%= link_to admin_advertisement_path(advertisement) do %>
                   <i class="fa fa-eye"></i>
@@ -38,6 +47,11 @@
             <td>
               <%= link_to edit_admin_advertisement_path(advertisement) do %>
                   <i class="fa fa-edit"></i>
+              <%- end %>
+            </td>
+            <td>
+              <%= link_to admin_advertisement_path(advertisement), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                  <i class="fa fa-trash fa-3"></i>
               <%- end %>
             </td>
           </tr>
