--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -5,6 +5,7 @@
       <tr class="info">
         <th>Name</th>
         <th>Email</th>
+        <th>Action</th>
       </tr>
       </thead>
       <tbody>
@@ -12,6 +13,11 @@
           <tr>
             <td><%= customer.name %></td>
             <td><%= customer.email %></td>
+            <td>
+              <%= link_to edit_admin_customer_path(customer) do %>
+                  <i class="fa fa-edit"></i>
+              <% end %>
+            </td>
           </tr>
       <%- end %>
       </tbody>
