--- a/app/views/customer/advertisements/_form.html.erb
+++ b/app/views/customer/advertisements/_form.html.erb
@@ -8,5 +8,5 @@
     <%= f.input :category_id, collection: category_for_collection, prompt: 'Select Category' %>
     <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select Subcategory' %>
     <%= f.input :description%>
-    <%= f.submit 'Save', class: 'btn btn-success' %>
+    <%= f.submit 'Save', class: 'btn btn-primary' %>
 <% end %>
