--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12"><%= link_to 'Post an Add', new_customer_advertisement_path, class: 'btn btn-success'  %></div>
+  <div class="col-xs-12"><%= link_to 'Post an Add', new_customer_advertisement_path, class: 'btn btn-primary'  %></div>
   <div class="col-xs-12">
     <table class="table table-striped">
       <tr class="info">
