--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -17,8 +17,9 @@
                 right: ''
             },
             defaultDate: "<%= DateTime.now %>",
-            editable: true,
+//            editable: true,
             eventLimit: true, // allow "more" link when too many events
+//            eventColor: 'red',
             events: [
                 <% @advertisements.each do |advertisement| %>
                 {
@@ -26,7 +27,7 @@
                     start: "<%= advertisement.start_at %>",
                     end: "<%= advertisement.end_at %>",
                     description: "<%= advertisement.description %>",
-                    url: "<%= edit_customer_advertisement_path(advertisement) %>",
+                    url: "<%= edit_customer_advertisement_path(advertisement) %>"
                 },
                 <% end %>
             ]
