--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,14 +23,14 @@
             <h4 class="slider-item-caption-title">Playstation 4</h4>
             <p class="slider-item-caption-desc">This is for The Players</p><a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>
           </div>
-          <!--<img class="slider-item-img-right" src="img/test_slider/13-i.png" alt="Image Alternative text" title="Image Title" style="top: 60%; width: 56%;" />-->
-        <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
+          <img class="slider-item-img-right" src="/assets/theme_img/test_slider/13-i.png" alt="Image Alternative text" title="Image Title" style="top: 60%; width: 56%;" />
+        <%#= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
         </div>
       </div>
     </div>
   </div>
   <div class="owl-item">
-    <div class="slider-item" style="background-image:url(/theme_img/1400x500.png);">
+    <div class="slider-item" style="background-image:url(assets/theme_img/1400x500.png);">
       <div class="container">
         <div class="slider-item-inner">
           <div class="slider-item-caption-right slider-item-caption-white">
