--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,13 +29,15 @@
     </div>
   </div>
   <div class="owl-item">
-    <div class="slider-item" style="background-image:url(/assets/theme_img/1400x500.png);">
+    <div class="slider-item" style="background-color:#9ce0e2;" >
       <div class="container">
         <div class="slider-item-inner">
+          <img class="slider-item-img-left" src="/assets/theme_img/test_slider/13-i.png" alt="Image Alternative text" title="Image Title" />
           <div class="slider-item-caption-right slider-item-caption-white">
             <h4 class="slider-item-caption-title">Smart Watches</h4>
             <p class="slider-item-caption-desc">Get One Just from $99</p><a class="btn btn-lg btn-ghost btn-white" href="#">Shop Now</a>
           </div>
+          <%#= image_tag 'theme_img/1400x500.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
         </div>
       </div>
     </div>
