--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,8 +22,7 @@
             <h4 class="slider-item-caption-title">Playstation 4</h4>
             <p class="slider-item-caption-desc">This is for The Players</p><a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>
           </div>
-          <img class="slider-item-img-right" src="/assets/theme_img/test_slider/13-i.png" alt="Image Alternative text" title="Image Title" style="top: 60%; width: 56%;" />
-        <%#= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
+        <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
         </div>
       </div>
     </div>
@@ -32,12 +31,11 @@
     <div class="slider-item" style="background-color:#9ce0e2;" >
       <div class="container">
         <div class="slider-item-inner">
-          <img class="slider-item-img-left" src="/assets/theme_img/test_slider/13-i.png" alt="Image Alternative text" title="Image Title" />
+          <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-left'%>
           <div class="slider-item-caption-right slider-item-caption-white">
             <h4 class="slider-item-caption-title">Smart Watches</h4>
             <p class="slider-item-caption-desc">Get One Just from $99</p><a class="btn btn-lg btn-ghost btn-white" href="#">Shop Now</a>
           </div>
-          <%#= image_tag 'theme_img/1400x500.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
         </div>
       </div>
     </div>
@@ -51,7 +49,6 @@
             <p class="slider-item-caption-desc">Your Running Shoes, Right Away.</p><a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>
           </div>
           <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right' %>
-          <!--<img class="slider-item-img-right" src="img/test_slider/3-i.png" alt="Image Alternative text" title="Image Title" />-->
         </div>
       </div>
     </div>
