--- a/app/assets/stylesheets/customer.css
+++ b/app/assets/stylesheets/customer.css
@@ -1,10 +1,8 @@
 /*
- *= require_tree .
- *= require_self
  *= require ./vendors/bootstrap
  *= require ./vendors/loading-bar
  *= require ./vendors/notify
  *= require ./vendors/select2
  *= require ./vendors/fullcalendar
- *= require_tree ./customer
+ * require_tree ./customer
  */
