create depandant functionality on edit of admin & customer

--- a/app/views/customer/advertisements/edit.html.erb
+++ b/app/views/customer/advertisements/edit.html.erb
@@ -3,3 +3,39 @@
     <%= render partial: 'form' %>
   </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+
+        if($('#advertisement_category_id').val() == ""){
+            $('#advertisement_subcategory_id').prop('disabled', 'disabled');
+        }else{
+            $('#advertisement_subcategory_id').prop('disable', true);
+            var category_val = $('#advertisement_category_id').val();
+            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){
+                var appendString = '<option value="">Select Subcategory</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#advertisement_subcategory_id').html(appendString);
+                $("#advertisement_subcategory_id").val("<%= @advertisement.subcategory_id %>");
+            });
+        }
+
+
+        $("#advertisement_category_id").change(function() {
+            var category_val = this.value;
+            $.get("/admin/subcategories/get_subcategories_for_category/"+ category_val +".json", function(data, status){
+                var appendString = '<option value="">Select Subcategory</option>';
+                for(var i=0; i < data.length;i++){
+                    appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                }
+                $('#advertisement_subcategory_id').html(appendString);
+            });
+            len = $("#advertisement_category_id option:selected").length
+            if (len > 0 ) {
+                $('#advertisement_subcategory_id').prop('disabled', false);
+            }
+        });
+    });
+</script>
