--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -31,6 +31,7 @@
               <%- end %>
               <%= link_to edit_customer_advertisement_path(advertisement) do %>
                   <i class="fa fa-edit"></i>
+                  edit
               <%- end %>
             </td>
           </tr>
