create about us page

--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -61,16 +61,12 @@
       </div>
     </div>
     <ul class="main-footer-links-list">
-      <li><a href="#">About Us</a>
-      </li>
-      <li><a href="#">Our Services</a>
-      </li>
-      <li><a href="#">Media</a>
-      </li>
-      <li><a href="#">Testimonials</a>
-      </li>
-      <li><a href="#">Contact Us</a>
-      </li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Wishlist</a></li>
+      <li><a href="#">Help</a></li>
     </ul>
   </div>
 </footer>
@@ -78,7 +74,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p class="copyright-text">Copyright &copy; <a href="/index">ByeBuying</a> 2014. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved</p>
+        <p class="copyright-text">Copyright &copy; <a href="/index">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved</p>
       </div>
       <!--<div class="col-md-6">-->
         <!--<ul class="payment-icons-list">-->
