create about us page

--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -29,7 +29,7 @@
       <p>Varius mattis rutrum nostra habitant feugiat condimentum faucibus taciti porttitor</p>
     </div>
     <div class="col-md-6">
-      <img class="full-width" src="img/550x210.png" alt="Image Alternative text" title="Image Title" />
+      <%= image_tag 'theme_img/550x210.png', class: 'img-responsive' %>
     </div>
   </div>
   <div class="gap gap-small"></div>
