--- a/app/views/admin/advertisements/_form.html.erb
+++ b/app/views/admin/advertisements/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [:admin, @advertisement] do |f| %>
     <%= f.input :title %>
     <%= f.input :category_id, collection: category_for_collection, prompt: 'Select Category'  %>
-    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select Subcategory' %>
+    <%= f.input :subcategory_id, collection: [], prompt: 'Select Subcategory' %>
     <%= f.input :start_at %>
     <%= f.input :end_at %>
     <%= f.input :per_hour_cost %>
