--- a/app/views/admin/subcategories/_form.html.erb
+++ b/app/views/admin/subcategories/_form.html.erb
@@ -4,6 +4,8 @@
         <%= f.error_notification %>
         <%= f.input :name %>
         <%= f.input :category_id, collection: category_for_collection, prompt: 'Select Category' %>
+        <%= f.input :male, label: 'For male', as: :boolean  %>
+        <%= f.input :female, label: 'For female', as: :boolean  %>
         <%= f.submit 'Save', class: 'btn btn-success' %>
       </div>
     </div>
