--- a/app/views/admin/subcategories/new.html.erb
+++ b/app/views/admin/subcategories/new.html.erb
@@ -16,6 +16,9 @@
             if (category_val == 'Wedding Collection'){
                 $(".subcategory_male, .subcategory_female").show();
             }
+            else{
+                $(".subcategory_male, .subcategory_female").hide();
+            }
         });
     });
 </script>
