--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -3,7 +3,7 @@
       <div class="col-sm-6">
         <%= f.error_notification %>
         <%= f.input :name %>
-        <%= f.submit 'Save', class: 'btn btn-success ' %>
+        <%= f.submit 'Save', class: 'btn btn-primary ' %>
       </div>
       <div class="col-sm-6"></div>
     </div>
