--- a/app/views/admin/subcategories/edit.html.erb
+++ b/app/views/admin/subcategories/edit.html.erb
@@ -3,3 +3,27 @@
     <%= render partial: 'form' %>
   </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+
+
+        if ($("#subcategory_category_id").find('option:selected').text() == 'Wedding Collection'){
+            $(".subcategory_male, .subcategory_female").show();
+        }
+        else{
+            $(".subcategory_male, .subcategory_female").hide();
+        }
+
+
+        $("#subcategory_category_id").change(function() {
+            var category_val = $(this).find('option:selected').text();
+            if (category_val == 'Wedding Collection'){
+                $(".subcategory_male, .subcategory_female").show();
+            }
+            else{
+                $(".subcategory_male, .subcategory_female").hide();
+            }
+        });
+    });
+</script>
