--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -4,3 +4,29 @@
   </div>
   <div class="col-sm-8"></div>
 </div>
+
+
+<!--<script>-->
+
+<!--//    $(document).ready(function(){-->
+<!--//-->
+<!--//        $(".product_gender").hide();-->
+<!--//-->
+<!--//        $('#product_category_id').change(function() {-->
+<!--//            var category_name = $("#product_category_id").find(":selected").text();-->
+<!--//            var category_id = $("#product_category_id").val();-->
+<!--//-->
+<!--//            if (category_name == 'Wedding Collection'){-->
+<!--//                $(".product_gender").show();-->
+<!--//            }-->
+<!--//            else{-->
+<!--//                $(".product_gender").hide();-->
+<!--//            }-->
+<!--//-->
+<!--//            -->
+<!--//-->
+<!--//        });-->
+<!--//-->
+<!--//    });-->
+
+<!--</script>-->
