--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for [:admin, @product] do |f| %>
-    <%= f.input :name %>
-    <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender'%>
     <%= f.input :category_id, collection: category_for_collection, prompt: 'Select category' %>
+    <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender'%>
     <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory' %>
+    <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :technical_specification %>
     <%= f.input :state_id %>
@@ -10,6 +10,7 @@
     <%= f.input :location %>
     <%= f.input :start_at %>
     <%= f.input :end_at %>
+    <%= f.input :quantity %>
     <%= f.input :rent, collection: ['Per day', 'Per week', 'Per month'], prompt: 'choose rent' %>
     <%= f.input :refundable_security %>
     <%= f.input :cost_of_replacement %>
