--- a/app/views/customer/shared/_sidebar.html.erb
+++ b/app/views/customer/shared/_sidebar.html.erb
@@ -1,4 +1,5 @@
 <ul>
   <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
   <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
+  <li><%= link_to 'Products', customer_products_path %></li>
 </ul>
