--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -2,6 +2,8 @@
   <li><%= link_to 'Dashboard', admin_dashboard_path %></li>
   <li><%= link_to 'Categories', admin_categories_path %></li>
   <li><%= link_to 'SubCategories', admin_subcategories_path %></li>
+  <li><%= link_to 'States', admin_states_path %></li>
+  <li><%= link_to 'Cities', admin_cities_path %></li>
   <!--<li><%#= link_to 'Advertisements', admin_advertisements_path %></li>-->
   <li><%= link_to 'Customers', admin_customers_path %></li>
   <li><%= link_to 'Products', admin_products_path %></li>
