--- a/app/views/admin/cities/_form.html.erb
+++ b/app/views/admin/cities/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [:admin, @city] do |f| %>
     <%= f.input :name %>
-    <%= f.input :state_id %>
-    <%= f.submit 'Save', class: 'btn btn-success' %>
+    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state' %>
+    <%= f.submit 'Save', class: 'btn btn-primary' %>
 <% end %>
