--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
-    <ul>
-      <li><%= link_to 'Add City', new_admin_city_path, class: 'btn btn-success' %></li>
+    <ul class="list-inline">
+      <li><%= link_to 'Add City', new_admin_city_path, class: 'btn btn-primary' %></li>
     </ul>
   </div>
 </div>
@@ -10,18 +10,18 @@
   <div class="col-xs-12">
     <table class="table table_striped">
       <tr class="info">
-        <td>city</td>
-        <td>State Id</td>
-        <td>Action</td>
+        <th>City</th>
+        <th>State Id</th>
+        <th>Action</th>
       </tr>
       <tr>
         <% @cities.each do |city| %>
             <tr>
               <td><%= city.name %></td>
-              <td><%= city.state_id %></td>
+              <td><%= city.state.name %></td>
               <td>
                 <%= link_to edit_admin_city_path(city) do %>
-                    <i class="fa fa-edit"></i> edit
+                    <i class="fa fa-edit"></i>
                 <% end %>
               </td>
             </tr>
