--- a/app/views/admin/cities/new.html.erb
+++ b/app/views/admin/cities/new.html.erb
@@ -1,1 +1,6 @@
-<%= render partial: 'form' %>
+<div class="row">
+  <div class="col-sm-4">
+    <%= render partial: 'form' %>
+  </div>
+  <div class="col-sm-8"></div>
+</div>
