--- a/app/views/admin/states/_form.html.erb
+++ b/app/views/admin/states/_form.html.erb
@@ -1,7 +1,5 @@
 <%= simple_form_for [:admin, @state] do |f| %>
-
     <%= f.error_notification %>
     <%= f.input :name %>
-    <%= f.submit 'Save', class: 'btn btn-success' %>
-
+    <%= f.submit 'Save', class: 'btn btn-primary' %>
 <%- end %>
