--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <ul class="list-inline">
       <li>
-        <%= link_to 'Add Product', new_customer_product_path, class: 'btn btn-primary' %>
+        <%= link_to 'Post Product', new_customer_product_path, class: 'btn btn-primary' %>
       </li>
     </ul>
   </div>
