--- a/app/views/customer/products/new.html.erb
+++ b/app/views/customer/products/new.html.erb
@@ -47,10 +47,10 @@
                 $('#product_subcategory_id').html(appendString);
             });
 
-//            len = $("#product_category_id option:selected").length
-//            if (len > 0 ) {
-//                $('#product_subcategory_id').prop('disabled', false);
-//            }
+            len = $("#product_category_id option:selected").length
+            if (len > 0 ) {
+                $('#product_subcategory_id').prop('disabled', false);
+            }
 
         });
 
